[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "CLI tool to fetch and filter PubMed research papers"
authors = ["Avinesh A <aviarul2002@gmail.com>"]
packages = [{ include = "pubmed_fetcher", from = "." }]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = "^0.12.3"
pandas = "^2.2.2"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
